force-app/main/default/objects/Utility_Data_Request_Period__c/Utility_Data_Request_Period__c.object-meta.xml
<CustomObject>
    <label>Utility Data Request Period</label>
    <nameField>
        
        <displayFormat>UDRP-{0000}</displayFormat>
        
        <label>Utility Data Request Period</label>
        
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Utility Data Request Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>