force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>E=Customer receives supply from an ESCO
U=Customer receives supply from the Utility</description>
    <inlineHelpText>E=Customer receives supply from an ESCO
U=Customer receives supply from the Utility</inlineHelpText>
    <label>Account Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>