force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Glynt_Average_Daily_Usage__c.field-meta.xml
<CustomField>
    <fullName>Glynt_Average_Daily_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if usage measurement value corresponds to average daily usage (e.g. Maine CMP bills)</description>
    <inlineHelpText>Checked if usage measurement value corresponds to average daily usage (e.g. Maine CMP bills)</inlineHelpText>
    <label>Average Daily Usage</label>
    <type>Checkbox</type>
</CustomField>