force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Load_Profile_Description__c.field-meta.xml
<CustomField>
    <fullName>Load_Profile_Description__c</fullName>
    <description>Load profile codes must be sent when the service is electric. Load profile definitions are accessible from the utility&apos;s website</description>
    <inlineHelpText>Load profile codes must be sent when the service is electric. Load profile definitions are accessible from the utility&apos;s website</inlineHelpText>
    <label>Load Profile Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>