force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Measurement_Reference__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Reference__c</fullName>
    <description>AN=Actual Period
BR=Bill History/The utility tariff provides for minimum charges regardless of actual consumption below the minimum and the utility does not retain the actual consumption data
CQ=Calculated Quantity
EN=Estimated Period</description>
    <inlineHelpText>AN=Actual Period
BR=Bill History/The utility tariff provides for minimum charges regardless of actual consumption below the minimum and the utility does not retain the actual consumption data
CQ=Calculated Quantity
EN=Estimated Period</inlineHelpText>
    <label>Measurement Reference</label>
    <length>5</length>
    <type>Text</type>
</CustomField>