force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Measurement_Significance_Code__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Significance_Code__c</fullName>
    <inlineHelpText>Indicates what type of measurement this UDRP is for. We only care about records that have 51 when rolling up annual kWh numbers.</inlineHelpText>
    <label>Measurement Significance Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>