force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Unit__c</fullName>
    <description>AJ=Adjusted Kilowatt Demand
HH=Hundred Cubic Feet (CCF)
K1=Kilowatt Demand/kW
K2=Kilovolt Amperes Reactive Demand/kVAR
K3=Kilovolt Amperes Reactive Hour/kVARh
K4=Kilovolt Amperes/kVA
KH=Kilowatt Hour/kWh
TD=Therms TZ=Thousand Cubic Feet (MCF)</description>
    <inlineHelpText>AJ=Adjusted Kilowatt Demand
HH=Hundred Cubic Feet (CCF)
K1=Kilowatt Demand/kW
K2=Kilovolt Amperes Reactive Demand/kVAR
K3=Kilovolt Amperes Reactive Hour/kVARh
K4=Kilovolt Amperes/kVA
KH=Kilowatt Hour/kWh
TD=Therms TZ=Thousand Cubic Feet (MCF)</inlineHelpText>
    <label>Measurement Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>