force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Measurement_Value__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Value__c</fullName>
    <label>Measurement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>