force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Num_Days__c.field-meta.xml
<CustomField>
    <fullName>Num_Days__c</fullName>
    <description>The number of days covered from Start Date to End Date.</description>
    <formula>(Service_End_Date__c - Service_Start_Date__c) + 1</formula>
    <inlineHelpText>The number of days covered from Start Date to End Date.</inlineHelpText>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>