force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Product_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Transfer_Type__c</fullName>
    <description>BC=Unmetered Services Summary
BG=Non repeating information &amp; factors used to determine monthly forecast quantities
FG=Scheduling Determinants/Additional Info
PM=Physical Meter Information SU=Account Services Summary</description>
    <inlineHelpText>BC=Unmetered Services Summary
BG=Non repeating information &amp; factors used to determine monthly forecast quantities
FG=Scheduling Determinants/Additional Info
PM=Physical Meter Information SU=Account Services Summary</inlineHelpText>
    <label>Product Transfer Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>