force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Quantity_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Qualifier__c</fullName>
    <description>1Y=Base Quantity
CQ=Calculated Quantity
D1=Billed
FJ=Slope Quantity
KA=Estimated Quantity
KC=Capacity Obligation
KZ=Transmission Obligation
LH=UFG Rate
LP=Load Factor
QD=Quantity Delivered</description>
    <inlineHelpText>1Y=Base Quantity
CQ=Calculated Quantity
D1=Billed
FJ=Slope Quantity
KA=Estimated Quantity
KC=Capacity Obligation
KZ=Transmission Obligation
LH=UFG Rate
LP=Load Factor
QD=Quantity Delivered</inlineHelpText>
    <label>Quantity Qualifier</label>
    <length>5</length>
    <type>Text</type>
</CustomField>