force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class__c</fullName>
    <description>Utility rate code as found in the tariff. (This code can be used to retrieve rates from a utility&apos;s web site.)</description>
    <inlineHelpText>Utility rate code as found in the tariff. (This code can be used to retrieve rates from a utility&apos;s web site.)</inlineHelpText>
    <label>Rate Class Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>