force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Rate_Class_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Class</label>
    <referenceTo>Rate_Class__c</referenceTo>
    <relationshipLabel>Utility Data Request Periods</relationshipLabel>
    <relationshipName>Utility_Data_Request_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>