force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Rate_Subclass__c.field-meta.xml
<CustomField>
    <fullName>Rate_Subclass__c</fullName>
    <description>This segment must be sent if a rate subclass is applicable. Provides further clarification of the Utility Rate Service Class. Prior to 11/2/2015 O&amp;R would send the Capacity Obligation in this field.</description>
    <inlineHelpText>This segment must be sent if a rate subclass is applicable. Provides further clarification of the Utility Rate Service Class. Prior to 11/2/2015 O&amp;R would send the Capacity Obligation in this field.</inlineHelpText>
    <label>Rate Subclass</label>
    <length>30</length>
    <type>Text</type>
</CustomField>