force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Used_in_Annual_kWh_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Used_in_Annual_kWh_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this UDRP is used in the UDR Annual kWh calculation.</description>
    <inlineHelpText>True if this UDRP is used in the UDR Annual kWh calculation.</inlineHelpText>
    <label>Used in Annual kWh Calculation</label>
    <type>Checkbox</type>
</CustomField>