force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Used_in_Average_Demand_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Used_in_Average_Demand_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the UDRP record was used to calculate the Average Demand of the related UDR/UAL</description>
    <inlineHelpText>Checked if the UDRP record was used to calculate the Average Demand of the related UDR/UAL</inlineHelpText>
    <label>Used in Average Demand Calculation</label>
    <type>Checkbox</type>
</CustomField>