force-app/main/default/objects/Utility_Data_Request_Period__c/fields/Utility_Data_Request__c.field-meta.xml
<CustomField>
    <fullName>Utility_Data_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Data Request</label>
    <referenceTo>Utility_Data_Request__c</referenceTo>
    <relationshipLabel>Utility Data Request Periods</relationshipLabel>
    <relationshipName>Utility_Data_Request_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>