force-app/main/default/objects/Utility_Data_Request_Period__c/recordTypes/EDI.recordType-meta.xml
<RecordType>
    <fullName>EDI</fullName>
    <active>true</active>
    <label>EDI</label>
</RecordType>