force-app/main/default/objects/Utility_Data_Request_Period__c/recordTypes/Glynt.recordType-meta.xml
<RecordType>
    <fullName>Glynt</fullName>
    <active>true</active>
    <label>Glynt</label>
</RecordType>